# player_watcher

./: Cargo.toml  LICENSE.txt  PKGBUILD  README.md
scripts/: playerctl_auto
src/: constants.rs  control.rs  daemon.rs  follow.rs  get.rs  main.rs  players.rs  players_queue.rs  shift.rs
