[package]
name = "player_watcher"
version = "0.2.0"
edition = "2024"
authors = ["Michał Moczulski"]
description = "Track which media player is currently active via MPRIS."
license = "MIT"
readme = "README.md"
repository = "https://github.com/michalmoc/player_watcher"

[dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "signal", "sync"] }
dbus-tokio = "0.7.6"
clap = { version = "4.5.38", features = ["derive"] }
